--- a/.github/workflows/compile_changelogs.yml
+++ b/.github/workflows/compile_changelogs.yml
@@ -24,15 +24,13 @@ jobs:
       - name: "Compile"
         run: |
           python tools/ss13_genchangelog.py html/changelog.html html/changelogs
-      - name: Commit
+      - name: "Commit"
         run: |
           git config --local user.email "action@github.com"
-          git config --local user.name "Changelogs"
+          git config --local user.name "GitHub Action"
           git pull origin master
           git commit -m "Automatic changelog compile [ci skip]" -a || true
       - name: "Push"
         uses: ad-m/github-push-action@master
-        env:
-          GITHUB_ACTOR: comfyorange
         with:
-          github_token: ${{ secrets.GITHUB_MASTER_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
